--- a/ui-mod-base/modules/_feature-box.scss
+++ b/ui-mod-base/modules/_feature-box.scss
@@ -45,6 +45,16 @@
 	align-self: center;
   }
 
+  &__link {
+	flex: 1 1 auto;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	&__button {
+	  align-self: initial;
+	}
+  }
+
   &.-shadow {
 	box-shadow: 0 0 10px 2px #ccc;
 	@media screen and (min-resolution: 192dpi) {
